Correction/Amélioration page accueil (fonctionnement + Restaurant + Footer) + Adaptation tablette et desk totalité page accueil

--- a/style/directories/component/_main.scss
+++ b/style/directories/component/_main.scss
@@ -4,6 +4,7 @@
 
 .fonctionnement {
     width: 100%;
+    margin-top: 60px;
 
     h2 {
         font-size: 30px;
@@ -13,8 +14,8 @@
         }
 
         @include desk-only {
-            text-align: left;
             margin: 70px 120px;
+            font-size: 2.5rem;
         }
     }
 
@@ -41,6 +42,15 @@
             border-radius: 30px;
             margin: 10px 0;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.229);
+            &:hover {
+                transition: 0.4s ease-in-out;
+                cursor: pointer;
+                filter: brightness(0.8);
+
+                .fa-solid {
+                    color: $primary;
+                }
+            }
 
             @include desk-only {
                 position: relative;
@@ -49,15 +59,6 @@
                 flex-direction: column;
                 justify-content: space-evenly;
 
-                &:hover {
-                    transition: 0.4s ease-in-out;
-                    cursor: pointer;
-                    filter: brightness(0.8);
-
-                    .fa-solid {
-                        color: $primary;
-                    }
-                }
             }
             p {
                 font-weight: 700;
@@ -69,7 +70,7 @@
             }
 
             .fa-solid {
-                margin-right: 70px;
+                margin-right: 30px;
                 font-size: 25px;
                 color: grey;
                 @include desk-only {
@@ -83,7 +84,7 @@
                 justify-content: center;
                 align-items: center;
                 margin: 0;
-                margin-right: 40px;
+                margin-right: 30px;
                 margin-left: -15px;
                 width: 25px;
                 height: 25px;
@@ -116,10 +117,20 @@
     width: 100%;
     background-color: $backexp;
     margin-top: 90px;
+    padding-bottom: 50px;
     h2 {
         font-size: 30px;
         margin: 0 0 25px 20px;
         padding-top: 70px;
+
+        @include tab-only {
+            text-align: center;
+        }
+
+        @include desk-only {
+            margin-bottom: 60px;
+            font-size: 2.5rem;
+        }
     }    
 
     .card-container {
@@ -129,15 +140,32 @@
         justify-content: space-evenly;
         align-items: center;
 
+        @include tab-only {
+            flex-direction: row;
+            flex-wrap: wrap;
+        }
+
+        a {
+            text-decoration: none;
+            color: black;
+            &:hover {
+                transform: scale(1.01);
+                transition: 0.4s ease;
+            }
+        }
         .card {
             width: 80%;
             object-fit: cover;
             height: 310px;
             border-radius: 20px;
-            box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.38);
+            box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.056);
             overflow: hidden;
             background-color: white;
             margin-bottom: 25px;
+
+            @include tab-only {
+                width: 40%;
+            }
 
             .img{
                 object-fit: cover;
@@ -155,7 +183,7 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                margin-left: 10px;
+                margin-left: 15px;
                 margin-top: 5px;
                 h3 {
                     margin: 10px 0 5px 0;
