--- a/style/directories/utils/_variables.scss
+++ b/style/directories/utils/_variables.scss
@@ -4,5 +4,5 @@ $primary: #9656DC;
 $secondary: #FF79DA;
 $tertiary: #99E2D0;
 
-$backpos: #f3ebeb;
+$backpos: #dfe0e1bb;
 $backexp: #cfc5c530;
