--- a/style/style.css
+++ b/style/style.css
@@ -34,7 +34,7 @@ body {
 .head .position {
   text-align: center;
   width: 100%;
-  background-color: #f3ebeb;
+  background-color: #dfe0e1bb;
   font-weight: 700;
   color: #414141;
   font-size: 17px;
@@ -104,6 +104,7 @@ body {
 
 .fonctionnement {
   width: 100%;
+  margin-top: 60px;
 }
 
 .fonctionnement h2 {
@@ -119,8 +120,8 @@ body {
 
 @media screen and (min-width: 1100px) {
   .fonctionnement h2 {
-    text-align: left;
     margin: 70px 120px;
+    font-size: 2.5rem;
   }
 }
 
@@ -172,6 +173,18 @@ body {
           box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.229);
 }
 
+.fonctionnement .card-container .card:hover {
+  -webkit-transition: 0.4s ease-in-out;
+  transition: 0.4s ease-in-out;
+  cursor: pointer;
+  -webkit-filter: brightness(0.8);
+          filter: brightness(0.8);
+}
+
+.fonctionnement .card-container .card:hover .fa-solid {
+  color: #9656DC;
+}
+
 @media screen and (min-width: 1100px) {
   .fonctionnement .card-container .card {
     position: relative;
@@ -184,16 +197,6 @@ body {
     -webkit-box-pack: space-evenly;
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
-  }
-  .fonctionnement .card-container .card:hover {
-    -webkit-transition: 0.4s ease-in-out;
-    transition: 0.4s ease-in-out;
-    cursor: pointer;
-    -webkit-filter: brightness(0.8);
-            filter: brightness(0.8);
-  }
-  .fonctionnement .card-container .card:hover .fa-solid {
-    color: #9656DC;
   }
 }
 
@@ -210,7 +213,7 @@ body {
 }
 
 .fonctionnement .card-container .card .fa-solid {
-  margin-right: 70px;
+  margin-right: 30px;
   font-size: 25px;
   color: grey;
 }
@@ -233,7 +236,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   margin: 0;
-  margin-right: 40px;
+  margin-right: 30px;
   margin-left: -15px;
   width: 25px;
   height: 25px;
@@ -267,12 +270,26 @@ body {
   width: 100%;
   background-color: #cfc5c530;
   margin-top: 90px;
+  padding-bottom: 50px;
 }
 
 .restaurant h2 {
   font-size: 30px;
   margin: 0 0 25px 20px;
   padding-top: 70px;
+}
+
+@media screen and (min-width: 750px) {
+  .restaurant h2 {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1100px) {
+  .restaurant h2 {
+    margin-bottom: 60px;
+    font-size: 2.5rem;
+  }
 }
 
 .restaurant .card-container {
@@ -292,17 +309,46 @@ body {
           align-items: center;
 }
 
+@media screen and (min-width: 750px) {
+  .restaurant .card-container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+.restaurant .card-container a {
+  text-decoration: none;
+  color: black;
+}
+
+.restaurant .card-container a:hover {
+  -webkit-transform: scale(1.01);
+          transform: scale(1.01);
+  -webkit-transition: 0.4s ease;
+  transition: 0.4s ease;
+}
+
 .restaurant .card-container .card {
   width: 80%;
   -o-object-fit: cover;
      object-fit: cover;
   height: 310px;
   border-radius: 20px;
-  -webkit-box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.38);
-          box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.38);
+  -webkit-box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.056);
+          box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.056);
   overflow: hidden;
   background-color: white;
   margin-bottom: 25px;
+}
+
+@media screen and (min-width: 750px) {
+  .restaurant .card-container .card {
+    width: 40%;
+  }
 }
 
 .restaurant .card-container .card .img {
@@ -330,7 +376,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-left: 10px;
+  margin-left: 15px;
   margin-top: 5px;
 }
 
@@ -369,6 +415,19 @@ footer {
   background-color: #313333;
   color: white;
   padding: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media screen and (min-width: 1100px) {
+  footer {
+    text-align: center;
+  }
 }
 
 footer h4 {
@@ -379,13 +438,27 @@ footer h4 {
   margin-top: 10px;
 }
 
-footer p {
+@media screen and (min-width: 1100px) {
+  footer h4 {
+    font-size: 30px;
+  }
+}
+
+footer a {
+  color: white;
   margin: 0;
   margin-bottom: 10px;
   margin-left: 20px;
+  text-decoration: none;
 }
 
-footer p i {
+@media screen and (min-width: 1100px) {
+  footer a {
+    font-size: 20px;
+  }
+}
+
+footer a i {
   margin-right: 10px;
   font-size: 12px;
 }
